--- a/EF Practice/CoreWebApplication/appsettings.Development.json
+++ b/EF Practice/CoreWebApplication/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "UserDatabase": "Data Source=RA-Dev-Sql01;Initial Catalog=007Admin;User id=RapidAdmin;Password=!7DaBj0#81"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
